<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:clipToPadding="true"
    android:fitsSystemWindows="true"
    
    android:background="@color/bg_title_white">

	<include layout="@layout/view_def_head" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/bg"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="514dp"
			android:gravity="top">

			<LinearLayout
				android:id="@+id/linearLayout1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginBottom="20dp"
				android:layout_marginTop="20dp"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:gravity="top"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:background="@drawable/shape_border_top"
					android:gravity="center"
					android:orientation="vertical">

					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip"
						android:visibility="gone">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/title_value_tx"
							android:drawableRight="@drawable/star"
							 />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_title"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true" />

					</LinearLayout>



					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/pinzhong_tx"
							android:drawableRight="@drawable/star" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/pinzhong_tv_content"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:clickable="true"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:hint="@string/hint_tx"
							android:singleLine="true"
							android:drawableRight="@drawable/arrow_right"
							android:onClick="onClick" />
					</LinearLayout>


				<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/maose_tv"
							android:drawableRight="@drawable/star" />
					
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_pigcolor"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:clickable="true"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:hint="@string/hint_tx"
							android:singleLine="true"
							android:drawableRight="@drawable/arrow_right"
							android:onClick="onClick" />

					</LinearLayout>


					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:id="@+id/price_tv"
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/trading_value_tx"
							android:drawableRight="@drawable/star" />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_price"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true"
							android:inputType="numberDecimal" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="right"
							android:layout_width="100.0dip"
							android:layout_height="wrap_content"
							android:layout_marginLeft="-110.0dip"
							android:text="元/公斤" />
					</LinearLayout>


					<LinearLayout
						android:id="@+id/chulan_layout"
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/chulan_shijian"
							android:drawableRight="@drawable/star" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/leave_start_timebox_tv_content"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:clickable="true"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:hint="@string/hint_tx"
							android:singleLine="true"
							android:drawableRight="@drawable/icon_date"
							android:onClick="onClick" />
					</LinearLayout>



					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:id="@+id/count_tv"
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/count_tx"
							android:drawableRight="@drawable/star" />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_count"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true"
							android:inputType="number" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="right"
							android:layout_width="100.0dip"
							android:layout_height="wrap_content"
							android:layout_marginLeft="-110.0dip"
							android:text="头" />
					</LinearLayout>


					<LinearLayout
						android:id="@+id/weight_layout"
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:id="@+id/weight_tv"
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/weight_tx"
							android:drawableRight="@drawable/star" />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_weight"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true"
							android:inputType="numberDecimal" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="right"
							android:layout_width="100.0dip"
							android:layout_height="wrap_content"
							android:layout_marginLeft="-110.0dip"
							android:text="公斤/头" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/profit_layout"
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip" 
						android:visibility="gone">
						<TextView
							android:id="@+id/profit_tv"
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/profit_tx"
							android:drawableRight="@drawable/star" />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_profit"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true"
							android:text="0"
							android:inputType="numberDecimal" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="right"
							android:layout_width="100.0dip"
							android:layout_height="wrap_content"
							android:layout_marginLeft="-110.0dip"
							android:text="元" />
					</LinearLayout>



					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="10dp"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="10dp"
						android:orientation="horizontal"
						android:visibility="gone">

						<TextView
							style="@style/tv_other2"
							android:layout_gravity="center"
							android:text="成交状态：" />

						<RadioGroup
							android:id="@+id/rg_status"
							android:layout_width="match_parent"
							android:layout_height="50dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">

							<RadioButton
								android:id="@+id/radio_no"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:checked="true"
								android:text="未成交" />

							<RadioButton
								android:id="@+id/radio_yes"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="已成交" />
						</RadioGroup>
					</LinearLayout>


					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="@string/shengshi_tx"
							android:drawableRight="@drawable/star" />
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/province_city_tv_content"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:clickable="false"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:hint="@string/hint_tx"
							android:singleLine="true"
							android:drawableRight="@drawable/arrow_right"
							android:onClick="onClick"
							/>
							
					</LinearLayout>



					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="详细地址："
							 />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_address"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="0dip"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true"
							android:layout_weight="1" 
							android:clickable="false"
							android:enabled="false"/>
						<ImageButton
						    android:id="@+id/locationBtn"
						    android:layout_width="wrap_content"
						    android:layout_height="match_parent"
						    android:layout_marginLeft="5.0dip"
						    android:background="@null"
						    android:gravity="center_vertical"
						    android:paddingRight="10.0dip"
						    android:src="@drawable/dw_icon"
						    android:scaleType="centerCrop"
						    android:onClick="onClick"
						    android:visibility="gone"
        					/>

					</LinearLayout>

					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_margin="5.0dip">
						<TextView
							android:textSize="@dimen/text_size"
							android:textColor="@color/black"
							android:gravity="center_vertical"
							android:layout_width="90.0dip"
							android:layout_height="wrap_content"
							android:text="备      注："
							
							 />
						<EditText
							android:textSize="@dimen/text_size"
							android:textColor="@color/edit_bg"
							android:gravity="center_vertical"
							android:id="@+id/et_remark"
							android:background="@drawable/edit_search"
							android:paddingLeft="10.0dip"
							android:paddingRight="10.0dip"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5.0dip"
							android:singleLine="true" />

					</LinearLayout>




				</LinearLayout>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="left"
					android:layout_marginLeft="10dip"
					android:text="上传图片:"
					android:id="@+id/img_add_tv" />
				<com.szmy.pigapp.widget.NoScrollGridView
					android:id="@+id/_gridView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10.0dip"
					android:background="@drawable/holder_bg_grey"
					android:columnWidth="100.0dip"
					android:listSelector="@drawable/grid_view_selector_with_transparent"
					android:numColumns="4"
					android:stretchMode="columnWidth" />

				<Button
					android:id="@+id/btn_submit"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_margin="10dp"
					android:background="@drawable/shape_btn_selector"
					android:text="@string/submit_tx"
					android:textColor="@color/white" />
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>

</LinearLayout>